<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".controller.WeatherFragment">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/horizontal_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.5"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/vertical_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.6"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/vertical_left_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.1"/>

  <TextView
    android:id="@+id/ski_resort_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_margin="@dimen/half_margin"
    style="@style/PowdrTitle"
    android:textAlignment="center"
    tools:text="Angel Fire Resort"/>

  <ImageView
    android:id="@+id/weather_icon"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ski_resort_name"
    app:layout_constraintWidth_percent="0.5"
    android:contentDescription="@string/weather_icon"/>

  <TextView
    android:id="@+id/current_temp"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
    app:layout_constraintTop_toBottomOf="@id/weather_icon"
    android:layout_margin="@dimen/half_margin"
    android:textSize="48sp"
    android:textAlignment="center"
    tools:text="34"/>

  <TextView
    android:id="@+id/temp_symbol"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/current_temp"
    app:layout_constraintTop_toBottomOf="@id/weather_icon"
    android:layout_margin="8dp"
    android:textSize="48sp"
    android:text="@string/temp_symbol"/>


  <TextView
    android:id="@+id/current_weather"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/current_temp"
    android:layout_margin="@dimen/half_margin"
    android:textSize="24sp"
    android:textAlignment="center"
    tools:text="Sunny"/>

  <TextView
    android:id="@+id/wind_speed"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:layout_marginTop="48dp"
    app:layout_constraintTop_toBottomOf="@id/current_weather"
    app:layout_constraintStart_toStartOf="@id/vertical_left_guideline"
    android:text="@string/wind_speed"/>

  <TextView
    android:id="@+id/wind_speed_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="48dp"
    app:layout_constraintStart_toEndOf="@id/vertical_guideline"
    app:layout_constraintTop_toBottomOf="@id/current_weather"
    android:textSize="24sp"
    tools:text="32"/>

  <TextView
    android:id="@+id/snowfall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:layout_marginTop="48dp"
    android:text="@string/snowfall"
    app:layout_constraintStart_toStartOf="@id/vertical_left_guideline"
    app:layout_constraintTop_toBottomOf="@id/wind_speed"/>

  <TextView
    android:id="@+id/snowfall_one_hour"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:text="@string/one_hour"
    android:layout_marginStart="@dimen/full_margin"
    app:layout_constraintStart_toStartOf="@id/vertical_left_guideline"
    app:layout_constraintTop_toBottomOf="@id/snowfall"/>

  <TextView
    android:id="@+id/snowfall_one_hour_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/vertical_guideline"
    app:layout_constraintTop_toBottomOf="@id/snowfall"
    android:textSize="24sp"
    tools:text="32"/>

  <TextView
    android:id="@+id/snowfall_three_hour"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:text="@string/three_hours"
    android:layout_marginStart="@dimen/full_margin"
    app:layout_constraintStart_toStartOf="@id/vertical_left_guideline"
    app:layout_constraintTop_toBottomOf="@id/snowfall_one_hour"/>

  <TextView
    android:id="@+id/snowfall_three_hour_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/vertical_guideline"
    app:layout_constraintTop_toBottomOf="@id/snowfall_one_hour"
    android:textSize="24sp"
    tools:text="32"/>


</androidx.constraintlayout.widget.ConstraintLayout>