<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/bio_header"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin"
    android:text="@string/bio_header"
    android:textSize="20sp"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:textAlignment="center"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/bio"/>


  <TextView
    android:id="@+id/bio"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin"
    android:textColor="@color/black"
    android:textSize="@dimen/body_text_size"
    android:minLines="5"
    android:maxLines="10"
    app:layout_constraintTop_toBottomOf="@id/bio_header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="Blah blah blah, snowboard snowboard snowboard lol i can't believe you ski, that's so gross"/>

  <TextView
    android:id="@+id/fav_resort_header"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin"
    android:text="@string/fav_ski_resorts_header"
    android:textSize="20sp"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:textAlignment="center"
    app:layout_constraintTop_toBottomOf="@id/bio"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/fav_resort_list"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/half_margin"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/fav_resort_header"
    app:layout_constraintEnd_toEndOf="parent"
    tools:listitem="@layout/ski_resort_item"
    tools:itemCount="4"/>

  <TextView
    android:id="@+id/friends_header"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin"
    android:text="@string/friends_header"
    android:textSize="20sp"
    android:fontFamily="sans-serif"
    android:textStyle="bold"
    android:textAlignment="center"
    app:layout_constraintTop_toBottomOf="@id/fav_resort_list"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/friends_list"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/half_margin"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/friends_header"
    app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>